# genetic-algorithms

./: genetic-algorithms.cabal
Chapter1/: Exercise1.hs  Exercise1.ods  Exercise1.sh  Exercise2.gp  Exercise2.hs  Exercise4.gp  Exercise4.hs
Chapter2/: Exercise1.hs  Exercise6.hs
