name:                genetic-algorithms
version:             0.1.0.0
author:              Karácsony Máté
build-type:          Simple
cabal-version:       >=1.10

library

  exposed-modules:
    Chapter1.Exercise1,
    Chapter1.Exercise2,
    Chapter1.Exercise4,
    Chapter2.Exercise1,
    Chapter2.Exercise6

  default-extensions:
    RecordWildCards

  build-depends:
    base >=4.8 && <4.9,
    mtl >=2.2 && <2.3,
    random >=1.1 && <1.2,
    parallel >=3.2 && <3.3

  default-language: Haskell2010

